# business-assistant-obsidian-plugin

./: .env.example  pyproject.toml
src/business_assistant_obsidian/: __init__.py  config.py  constants.py  obsidian_service.py  plugin.py
tests/: conftest.py  test_config.py  test_obsidian_service.py  test_plugin_registration.py
